新增取得已購買的課程列表, 更新 swagger json 檔
